--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -149,7 +149,7 @@
                         <Label Content="*"
                                Grid.Column="1"
                                Margin="-7 0 0 0"
-                               Foreground="{Binding ForegroundColor}"/>
+                               Foreground="{Binding DeleteForeground}"/>
                     </Grid>
                     
                 <TextBox Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
