--- a/Codebase/Typerr/View/TestPreviewView.xaml
+++ b/Codebase/Typerr/View/TestPreviewView.xaml
@@ -8,6 +8,7 @@
              xmlns:viewmodel="clr-namespace:Typerr.ViewModel" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              d:DataContext="{d:DesignInstance Type=viewmodel:TestPreviewViewModel}"
              mc:Ignorable="d">
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -19,7 +20,7 @@
                 <RowDefinition Height="180"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
-                <RowDefinition Height="60"/>
+                <RowDefinition Height="65"/>
             </Grid.RowDefinitions>
             <Grid.Resources>
                 <Style TargetType="Button">
@@ -243,13 +244,19 @@
                                                   Height="25"
                                     Foreground="{StaticResource AppTheme}"/>
                     </Button>
-                    <ItemsControl ItemsSource="{Binding TestPreviewControls}">
+                    <Button Content="Start Test Over"
+                            Style="{StaticResource SecondaryButtonTheme}"
+                            Visibility="{Binding StartTestOverVisibility}"
+                            Width="{Binding StartTestOverWidth}"/>
+                    <Button Content="{Binding StartTestText}"
+                            Style="{StaticResource PrimaryButtonTheme}"/>
+                    <!--<ItemsControl ItemsSource="{Binding TestPreviewControls}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <UniformGrid Rows="1" Margin="10"/>
                             </ItemsPanelTemplate>
                         </ItemsControl.ItemsPanel>
-                    </ItemsControl>
+                    </ItemsControl>-->
                 </StackPanel>
 
             </Grid>
