--- a/Codebase/Typerr/MainWindow.xaml
+++ b/Codebase/Typerr/MainWindow.xaml
@@ -32,6 +32,9 @@
         <DataTemplate DataType="{x:Type vms:TestPreviewViewModel}">
             <views:TestPreviewView Width="725"/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type vms:TestViewModel}">
+            <views:TestView/>
+        </DataTemplate>
     </Window.Resources>
 
     <WindowChrome.WindowChrome>
