--- a/Codebase/Typerr/Components/NavPanel.xaml
+++ b/Codebase/Typerr/Components/NavPanel.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Typerr.Components" xmlns:viewmodel="clr-namespace:Typerr.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:NavPanelViewModel}"
+             xmlns:local="clr-namespace:Typerr.Components" 
+             xmlns:viewmodel="clr-namespace:Typerr.ViewModel" 
+             d:DataContext="{d:DesignInstance Type=viewmodel:NavPanelViewModel}"
              mc:Ignorable="d">
     <StackPanel>
         <!--App Title-->
