--- a/Codebase/Typerr/MainWindow.xaml
+++ b/Codebase/Typerr/MainWindow.xaml
@@ -35,6 +35,9 @@
         <DataTemplate DataType="{x:Type vms:TestViewModel}">
             <views:TestView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type vms:TestPanelViewModel}">
+            <components:TestPanel/>
+        </DataTemplate>
     </Window.Resources>
 
     <WindowChrome.WindowChrome>
